--- a/src/pages/app.scss
+++ b/src/pages/app.scss
@@ -43,7 +43,7 @@ time, mark, audio, video {
   margin-top: 112px;
 }
 
-.nav-item {
+.nav-item, .navbar-light .nav-item {
   margin: 0 19px;
   letter-spacing: .5px;
   .nav-link {
@@ -63,7 +63,7 @@ time, mark, audio, video {
     &.active {
       &::after {
         content: '';
-        width: calc(100% + 0px);
+        width: 100%;
         display: flex;
         height: 1px;
         margin-top: 2px;
@@ -73,11 +73,198 @@ time, mark, audio, video {
   }
 }
 
-.socials {
+
+.navbar-toggler {
+  padding: 0;
+  border: none;
+  border-radius: 0;
+}
+
+
+@keyframes tmpl-anim-fade-up {
+  from,to {
+      animation-timing-function: cubic-bezier(.4,0,.2,1);
+      transform-origin: center center
+  }
+
+  from {
+      opacity: 0;
+      transform: matrix(1,0,0,1,0,25)
+  }
+
+  to {
+      opacity: 1;
+      transform: matrix(1,0,0,1,0,0)
+  }
+}
+
+@keyframes tmpl-anim-fade-scale-up {
+  from,to {
+      animation-timing-function: cubic-bezier(.4,0,.2,1);
+      transform-origin: center center
+  }
+
+  from {
+      opacity: 0;
+      transform: matrix(.92,0,0,.92,0,0)
+  }
+
+  to {
+      opacity: 1;
+      transform: matrix(1,0,0,1,0,0)
+  }
+}
+
+@keyframes tmpl-anim-fade-stretch-up {
+  from,to {
+      animation-timing-function: cubic-bezier(.4,0,.2,1);
+      transform-origin: center 0
+  }
+
+  from {
+      opacity: 0;
+      transform: matrix(.9,0,0,1.3,0,25)
+  }
+
+  to {
+      opacity: 1;
+      transform: matrix(1,0,0,1,0,0)
+  }
+}
+
+@keyframes tmpl-anim-clip-vertical-up {
+  from,to {
+      animation-timing-function: cubic-bezier(.4,0,.2,1)
+  }
+
+  from {
+      -webkit-clip-path: polygon(50% 0%,100% 0%,100% 0%,50% 0%,50% 100%,0% 100%,0% 100%,50% 100%,50% 100%,50% 100%);
+      clip-path: polygon(50% 0%,100% 0%,100% 0%,50% 0%,50% 100%,0% 100%,0% 100%,50% 100%,50% 100%,50% 100%)
+  }
+
+  to {
+      -webkit-clip-path: polygon(50% 0%,100% 0%,100% 100%,50% 100%,50% 100%,0% 100%,0% 0%,50% 0%,50% 100%,50% 100%);
+      clip-path: polygon(50% 0%,100% 0%,100% 100%,50% 100%,50% 100%,0% 100%,0% 0%,50% 0%,50% 100%,50% 100%)
+  }
+}
+
+@keyframes tmpl-anim-clip-horizontal-left {
+  from,to {
+      animation-timing-function: cubic-bezier(.4,0,.2,1)
+  }
+
+  from {
+      -webkit-clip-path: polygon(0% 50%,0% 100%,0% 100%,0% 50%,100% 50%,100% 0%,100% 0%,100% 50%,100% 50%,100% 50%);
+      clip-path: polygon(0% 50%,0% 100%,0% 100%,0% 50%,100% 50%,100% 0%,100% 0%,100% 50%,100% 50%,100% 50%)
+  }
+
+  to {
+      -webkit-clip-path: polygon(0% 50%,0% 100%,100% 100%,100% 50%,100% 50%,100% 0%,0% 0%,0% 50%,100% 50%,100% 50%);
+      clip-path: polygon(0% 50%,0% 100%,100% 100%,100% 50%,100% 50%,100% 0%,0% 0%,0% 50%,100% 50%,100% 50%)
+  }
+}
+
+.burger {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  background-color: transparent;
+  border: none
+}
+
+.burger-box {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 33px;
+  height: 33px
+}
+
+.burger-inner {
+  width: 100%;
+  height: 100%
+}
+
+.burger-inner::before,.burger-inner::after {
+  position: absolute;
+  display: block;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  margin: auto;
+  content: '';
+  width: 100%;
+  height: 1px;
+  transition: transform 250ms cubic-bezier(.2,.6,.3,1),width 250ms cubic-bezier(.2,.6,.3,1);
+  will-change: transform,width
+}
+
+.burger-inner::before {
+  transform: translatey(-5.5px)
+}
+
+.burger-inner::after {
+  transform: translatey(5.5px)
+}
+
+.burger--left .burger-inner::after {
+  transform: translatey(5.5px)
+}
+
+.burger:not(.collapsed) .burger-inner::before {
+  transform: translatex(3.3px) rotate(-135deg);
+  width: 26.4px
+}
+
+.burger:not(.collapsed) .burger-inner::after {
+  transform: translatex(3.3px) rotate(135deg);
+  width: 26.4px
+}
+
+
+.burger-inner::before, .burger-inner::after {
+  background-color: #000;
+}
+
+
+.header .socials {
   margin-top: 2px;
-  margin-left: 45px;
-  .social:last-child {
+  .social {
     margin-left: 44px;
+  }
+}
+
+
+.footer {
+  padding-top: 120px;
+  padding-bottom: 40px;
+  .socials {
+    .social {
+      margin-left: 15px;
+      margin-right: 15px;
+      svg {
+        width: 23px;
+        height: 23px;
+      }
+    }
+  }
+  .navbar {
+    margin-top: 50px;
+    .nav-link {
+      font: {
+        size: 22px;
+        weight: 400;
+      }
+      &::after {
+        content: '';
+        width: 100%;
+        display: flex;
+        height: 1px;
+        margin-top: 2px;
+        background: #000;
+      }
+    }
   }
 }
 
@@ -113,3 +300,7 @@ time, mark, audio, video {
   padding-right: 15px;
   margin-bottom: 40px;
 }
+
+
+
+
