--- a/src/pages/app.scss
+++ b/src/pages/app.scss
@@ -21,11 +21,21 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 
+body {
+  overflow-y: scroll;
+  width: 100%;
+}
+
+button:focus {
+  outline: none;
+}
+
 .content {
   margin: 65px 0;
 }
 
 .site-title {
+  z-index: 11;
   font: {
     size: 29px;
     weight: 500;
@@ -40,7 +50,15 @@ time, mark, audio, video {
 }
 
 .main {
-  margin-top: 112px;
+  margin-top: 110px;
+}
+
+.header .navbar {
+  z-index: 11;
+}
+
+.navbar-light .navbar-nav .active>.nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show>.nav-link {
+  color: #000;
 }
 
 .nav-item, .navbar-light .nav-item {
@@ -78,90 +96,6 @@ time, mark, audio, video {
   padding: 0;
   border: none;
   border-radius: 0;
-}
-
-
-@keyframes tmpl-anim-fade-up {
-  from,to {
-      animation-timing-function: cubic-bezier(.4,0,.2,1);
-      transform-origin: center center
-  }
-
-  from {
-      opacity: 0;
-      transform: matrix(1,0,0,1,0,25)
-  }
-
-  to {
-      opacity: 1;
-      transform: matrix(1,0,0,1,0,0)
-  }
-}
-
-@keyframes tmpl-anim-fade-scale-up {
-  from,to {
-      animation-timing-function: cubic-bezier(.4,0,.2,1);
-      transform-origin: center center
-  }
-
-  from {
-      opacity: 0;
-      transform: matrix(.92,0,0,.92,0,0)
-  }
-
-  to {
-      opacity: 1;
-      transform: matrix(1,0,0,1,0,0)
-  }
-}
-
-@keyframes tmpl-anim-fade-stretch-up {
-  from,to {
-      animation-timing-function: cubic-bezier(.4,0,.2,1);
-      transform-origin: center 0
-  }
-
-  from {
-      opacity: 0;
-      transform: matrix(.9,0,0,1.3,0,25)
-  }
-
-  to {
-      opacity: 1;
-      transform: matrix(1,0,0,1,0,0)
-  }
-}
-
-@keyframes tmpl-anim-clip-vertical-up {
-  from,to {
-      animation-timing-function: cubic-bezier(.4,0,.2,1)
-  }
-
-  from {
-      -webkit-clip-path: polygon(50% 0%,100% 0%,100% 0%,50% 0%,50% 100%,0% 100%,0% 100%,50% 100%,50% 100%,50% 100%);
-      clip-path: polygon(50% 0%,100% 0%,100% 0%,50% 0%,50% 100%,0% 100%,0% 100%,50% 100%,50% 100%,50% 100%)
-  }
-
-  to {
-      -webkit-clip-path: polygon(50% 0%,100% 0%,100% 100%,50% 100%,50% 100%,0% 100%,0% 0%,50% 0%,50% 100%,50% 100%);
-      clip-path: polygon(50% 0%,100% 0%,100% 100%,50% 100%,50% 100%,0% 100%,0% 0%,50% 0%,50% 100%,50% 100%)
-  }
-}
-
-@keyframes tmpl-anim-clip-horizontal-left {
-  from,to {
-      animation-timing-function: cubic-bezier(.4,0,.2,1)
-  }
-
-  from {
-      -webkit-clip-path: polygon(0% 50%,0% 100%,0% 100%,0% 50%,100% 50%,100% 0%,100% 0%,100% 50%,100% 50%,100% 50%);
-      clip-path: polygon(0% 50%,0% 100%,0% 100%,0% 50%,100% 50%,100% 0%,100% 0%,100% 50%,100% 50%,100% 50%)
-  }
-
-  to {
-      -webkit-clip-path: polygon(0% 50%,0% 100%,100% 100%,100% 50%,100% 50%,100% 0%,0% 0%,0% 50%,100% 50%,100% 50%);
-      clip-path: polygon(0% 50%,0% 100%,100% 100%,100% 50%,100% 50%,100% 0%,0% 0%,0% 50%,100% 50%,100% 50%)
-  }
 }
 
 .burger {
@@ -229,7 +163,7 @@ time, mark, audio, video {
 
 
 .header .socials {
-  margin-top: 2px;
+  margin-top: -5px;
   .social {
     margin-left: 44px;
   }
@@ -270,15 +204,16 @@ time, mark, audio, video {
 
 .job-title {
   display: flex;
-  align-items: center;
   font: {
     size: 29px;
     weight: 400;
   }
+  line-height: 40px;
   &::before {
     content: '';
     display: flex;
     width: 25px;
+    margin-top: 18px;
     height: 3px;
     background: #000;
     border-radius: 50rem;
@@ -302,5 +237,116 @@ time, mark, audio, video {
 }
 
 
+@media(max-width: 991.98px) {
+  .header {
+    .socials {
+      position: absolute;
+      bottom: 50px;
+      .social {
+        margin-left: 25px;
+        margin-right: 25px;
+        svg {
+          width: 30px;
+          height: 30px;
+        }
+      }
+    }
+  }
+  .navbar-collapse {
+    position: fixed;
+    width: 100%;
+    height: calc(100vh - 115px) !important;
+    left: 0;
+    top: 115px;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: opacity 150ms;
+    &.show {
+      opacity: 1;
+    }
+    .nav-item .nav-link {
+      font: { 
+        size: 44px;
+        weight: 400;
+      }
+      &.active::after {
+        content: none;
+      }
+    }
+    .navbar-nav {
+      margin-top: -115px;
+    }
+  }
+}
 
+.navbar-bg {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+  visibility: hidden;
+  transition: 0.3s;
+}
 
+@media(max-width: 575.98px) {
+  .site-title {
+    font-size: 25px;
+  }
+
+  .header {
+    .socials {
+      .social {
+        svg {
+          width: 26px;
+          height: 26px;
+        }
+      }
+    }
+  }
+
+  .navbar-collapse .nav-item .nav-link {
+    font: {
+      size: 30px;
+      weight: 300;
+    }
+    padding: 6px 0 !important;
+  }
+
+  .main {
+    margin-top: 90px;
+  }
+
+  .job-title {
+    display: flex;
+    font-size: 23px;
+    line-height: 35px;
+  }
+
+  .projects {
+    margin-top: 40px;
+    .project {
+      margin-bottom: 20px;
+    }
+  }
+
+  .footer {
+    padding-top: 90px;
+    padding-bottom: 0;
+    .navbar {
+      margin-top: 40px;
+      .nav-item {
+        margin: 0 10px;
+      }
+      .nav-link {
+        font-size: 18px;
+        font-weight: 500;
+      }
+    }
+  }
+}
