included gatsby-remark-images and added case study for wake-up-foods project

--- a/src/components/app.scss
+++ b/src/components/app.scss
@@ -16,9 +16,9 @@ time, mark, audio, video {
 	margin: 0;
 	padding: 0;
 	border: 0;
-  font-size: 100%;
   font-family: 'Open Sauce Sans';
-	vertical-align: baseline;
+  vertical-align: baseline;
+  color: #000;
 }
 
 body {
