--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,22 +1,90 @@
-@import '_fonts';
+@import "_fonts";
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-  font-family: 'Open Sauce Sans';
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-family: "Open Sauce Sans";
   vertical-align: baseline;
   color: #000;
 }
@@ -34,7 +102,9 @@ button:focus {
   outline: none;
 }
 
-input, select, textarea {
+input,
+select,
+textarea {
   width: 100%;
   padding: 17px;
   margin-bottom: 20px;
@@ -46,7 +116,7 @@ input, select, textarea {
   border-radius: 2px;
 }
 
-input[type=submit] {
+input[type="submit"] {
   width: unset;
   border: none;
   cursor: pointer;
@@ -62,7 +132,6 @@ textarea {
   min-height: 150px;
 }
 
-
 .content {
   padding: 65px 0;
 }
@@ -75,6 +144,7 @@ textarea {
   }
   a {
     color: #000;
+    text-decoration: none;
     &:hover {
       color: #000;
       text-decoration: none;
@@ -90,13 +160,17 @@ textarea {
   z-index: 11;
 }
 
-.navbar-light .navbar-nav .active>.nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show>.nav-link {
+.navbar-light .navbar-nav .active > .nav-link,
+.navbar-light .navbar-nav .nav-link.active,
+.navbar-light .navbar-nav .nav-link.show,
+.navbar-light .navbar-nav .show > .nav-link {
   color: #000;
 }
 
-.nav-item, .navbar-light .nav-item {
+.nav-item,
+.navbar-light .nav-item {
   margin: 0 19px;
-  letter-spacing: .5px;
+  letter-spacing: 0.5px;
   .nav-link {
     color: #000;
     position: relative;
@@ -113,7 +187,7 @@ textarea {
     }
     &.active {
       &::after {
-        content: '';
+        content: "";
         width: 100%;
         display: flex;
         height: 1px;
@@ -123,7 +197,6 @@ textarea {
     }
   }
 }
-
 
 .navbar-toggler {
   padding: 0;
@@ -136,7 +209,7 @@ textarea {
   display: inline-block;
   cursor: pointer;
   background-color: transparent;
-  border: none
+  border: none;
 }
 
 .burger-box {
@@ -145,55 +218,57 @@ textarea {
   align-items: center;
   justify-content: center;
   width: 33px;
-  height: 33px
+  height: 33px;
 }
 
 .burger-inner {
   width: 100%;
-  height: 100%
+  height: 100%;
 }
 
-.burger-inner::before,.burger-inner::after {
+.burger-inner::before,
+.burger-inner::after {
   position: absolute;
   display: block;
   top: 0;
   left: 0;
   bottom: 0;
   margin: auto;
-  content: '';
+  content: "";
   width: 100%;
   height: 1px;
-  transition: transform 250ms cubic-bezier(.2,.6,.3,1),width 250ms cubic-bezier(.2,.6,.3,1);
-  will-change: transform,width
+  transition:
+    transform 250ms cubic-bezier(0.2, 0.6, 0.3, 1),
+    width 250ms cubic-bezier(0.2, 0.6, 0.3, 1);
+  will-change: transform, width;
 }
 
 .burger-inner::before {
-  transform: translatey(-5.5px)
+  transform: translatey(-5.5px);
 }
 
 .burger-inner::after {
-  transform: translatey(5.5px)
+  transform: translatey(5.5px);
 }
 
 .burger--left .burger-inner::after {
-  transform: translatey(5.5px)
+  transform: translatey(5.5px);
 }
 
 .burger:not(.collapsed) .burger-inner::before {
   transform: translatex(3.3px) rotate(-135deg);
-  width: 26.4px
+  width: 26.4px;
 }
 
 .burger:not(.collapsed) .burger-inner::after {
   transform: translatex(3.3px) rotate(135deg);
-  width: 26.4px
+  width: 26.4px;
 }
 
-
-.burger-inner::before, .burger-inner::after {
+.burger-inner::before,
+.burger-inner::after {
   background-color: #000;
 }
-
 
 .header .socials {
   margin-top: -5px;
@@ -201,7 +276,6 @@ textarea {
     margin-left: 34px;
   }
 }
-
 
 .footer {
   padding-top: 120px;
@@ -224,7 +298,7 @@ textarea {
         weight: 400;
       }
       &::after {
-        content: '';
+        content: "";
         width: 100%;
         display: flex;
         height: 1px;
@@ -243,7 +317,7 @@ textarea {
   }
   line-height: 40px;
   &::before {
-    content: '';
+    content: "";
     display: flex;
     width: 25px;
     margin-top: 18px;
@@ -255,7 +329,7 @@ textarea {
 }
 
 .category .btn {
-  @media(max-width: 575.95px) {
+  @media (max-width: 575.95px) {
     width: 100%;
     text-align: left;
     padding: 12px 18px !important;
@@ -263,11 +337,12 @@ textarea {
   }
   color: #6e6d7a;
   &.active {
-    background: rgba(13,12,34,0.05);
+    background: rgba(13, 12, 34, 0.05);
     border-radius: 8px;
     font-weight: 500;
   }
-  &:hover, &.active {
+  &:hover,
+  &.active {
     color: #0d0c22;
   }
   &:focus {
@@ -290,8 +365,7 @@ textarea {
   margin-bottom: 80px;
 }
 
-
-@media(max-width: 992.98px) {
+@media (max-width: 992.98px) {
   .projects-row {
     margin-left: -22px;
     margin-right: -22px;
@@ -303,7 +377,7 @@ textarea {
   }
 }
 
-@media(max-width: 991.98px) {
+@media (max-width: 991.98px) {
   .header {
     .socials {
       position: absolute;
@@ -335,7 +409,7 @@ textarea {
       opacity: 1;
     }
     .nav-item .nav-link {
-      font: { 
+      font: {
         size: 44px;
         weight: 400;
       }
@@ -360,7 +434,7 @@ textarea {
   transition: 0.3s;
 }
 
-@media(max-width: 992.98px) {
+@media (max-width: 992.98px) {
   .footer {
     .navbar {
       margin-top: 33px;
@@ -368,7 +442,7 @@ textarea {
   }
 }
 
-@media(max-width: 575.98px) {
+@media (max-width: 575.98px) {
   .site-title {
     font-size: 25px;
   }
@@ -424,17 +498,182 @@ textarea {
   }
 }
 
+.project-description {
+  color: #484848;
+  font-size: 15px;
+  font-weight: 300;
+  line-height: 29px;
+}
+
+.project-details {
+  gap: 0;
+}
+
+.project-details-item {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 20%;
+  @media (max-width: 991.98px) {
+    width: 100%;
+    margin: 15px 0;
+  }
+  a {
+    color: #000;
+    &:hover {
+      color: #000;
+    }
+  }
+}
+
+.project-details-title {
+  font-size: 17px;
+  font-weight: 500;
+  line-height: 29px;
+}
+
+.project-details-description {
+  margin-top: 4px;
+  font-size: 14px;
+  font-weight: 300;
+  white-space: pre-wrap;
+}
+
+.view-project {
+  font-size: 13px;
+  font-weight: 500;
+  letter-spacing: 1.5px;
+  display: flex;
+  color: #000;
+  text-decoration: none;
+  &:hover {
+    color: #000;
+  }
+  &::before {
+    content: "";
+    display: flex;
+    width: 25px;
+    margin-top: 7.5px;
+    height: 3px;
+    background: #000;
+    border-radius: 50rem;
+    margin-right: 14px;
+  }
+}
+
+.project-pagination-link {
+  font-size: 28px;
+  color: #000;
+  text-decoration: none;
+  &:hover {
+    color: #000;
+    text-decoration: none;
+  }
+  @media (max-width: 992.98px) {
+    font-size: 22px;
+  }
+  @media (max-width: 767.98px) {
+    .project-pagination-title {
+      display: none;
+    }
+  }
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
+
 .title {
   color: #000;
   font-size: 29px;
   font-weight: 400;
   line-height: 45px;
-  @media(max-width: 575.98px) {
+  @media (max-width: 575.98px) {
     font-size: 25px;
     line-height: 36px;
   }
 }
 
-.sr-only {
-  display: none;
+.resume {
+  width: 700px;
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 20px 0;
+  font-family: Roboto, sans-serif;
+  color: #000;
+
+  // restore browser defaults stripped by reset
+  h2,
+  p,
+  ul,
+  li,
+  span,
+  b,
+  a,
+  br {
+    font-family: Roboto, sans-serif;
+    color: #000;
+  }
+
+  h2 {
+    font-size: 1.5em;
+    font-weight: bold;
+    margin: 0.83em 0;
+  }
+
+  p {
+    margin: 1em 0;
+  }
+
+  ul {
+    list-style: disc;
+    padding-left: 2em;
+    margin: 1em 0;
+  }
+
+  li {
+    display: list-item;
+  }
+
+  a {
+    color: #4183c4;
+    text-decoration: none;
+    &:visited {
+      color: #4183c4;
+    }
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+
+  blockquote {
+    border-left: 5px solid #ddd;
+    margin: 1em 0;
+    padding-left: 0.6em;
+  }
+
+  .resume-name {
+    font-weight: bold;
+    font-size: 20px;
+  }
+
+  .resume-position {
+    font-weight: bold;
+  }
+
+  .resume-company {
+    text-decoration: underline;
+  }
+
+  .resume-date {
+    font-size: 14px;
+  }
 }
